Create swagger doc for get batch org endpoint
